Bug 1889383 - "Item changed on server" dialog (calendar-conflicts-dialog) needs a scrollbar. r=freaktechnik
For testing:

```
window.openDialog(
  "chrome://calendar/content/calendar-conflicts-dialog.xhtml",
  "calendarConflictsDialog",
  "chrome,titlebar,modal",
  {
  item: { isEvent() { return true}, getProperty() { return "ABC"; }, get calendar() { return { name: "test"} }, title: "Test title", descriptionText: "ABCABCBABA ".repeat(1000) } ,
  mode: "modify",
  overwrite: false,
  }
);
```

Differential Revision: https://phabricator.services.mozilla.com/D206753

--HG--
extra : rebase_source : e87e5cb8e3bd2593b9a1148e77509aa75f0581d3
extra : amend_source : 07e59f1b84f0b57f0d1c971e18aba924232bbbc1

--- a/calendar/base/themes/common/calendar-views.css
+++ b/calendar/base/themes/common/calendar-views.css
@@ -1008,9 +1008,26 @@ calendar-event-box:hover :is(.gripbar-start, .gripbar-end) {
   margin: 0pt;
 }
 
+.tooltipBody.notTooltip {
+  flex: 1 1 0;
+  overflow: auto;
+}
+
+#conflicts-vbox {
+  display: flex;
+  flex: 1 1 0;
+  min-height: 250px;
+  overflow: hidden;
+  margin: 2px 4px;
+}
+
 #conflicts-vbox .tooltipBody {
   overflow: auto;
-  min-height: 250px;
+}
+
+#conflicts-description {
+  max-width: 40em;
+  margin-top: 1ex;
 }
 
 #calendar-view-context-menu[type="event"] .todo-only,
